SigmaCodebackup3rdSep/objects/ProposalLineItemLocation__c.object
<CustomObject>
    <fields>
        <fullName>AVR_Commission_Euro__c</fullName>
        <formula>If( Proposal_Line_Item__r.Proposal__r.AVR_Commission_Euro__c &lt;&gt; 0.00,(Proposal_Line_Item__r.Proposal__r.AVR_Commission_Euro__c / Proposal_Line_Item__r.Proposal__r.Gross_Amount_Euro__c ) * ( Quantity__c * Cost_Euro__c ),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVR Commission Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVR_Commission__c</fullName>
        <formula>If( Proposal_Line_Item__r.Proposal__r.AVR_Commission__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.AVR_Commission__c / Proposal_Line_Item__r.Proposal__r.Net_Amount__c ) * ( Quantity__c * Cost__c ), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVR Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agency_Commission_Euro__c</fullName>
        <formula>if( Proposal_Line_Item__r.Proposal__r.Agent_Commission_Euro__c &lt;&gt; 0.00,(Proposal_Line_Item__r.Proposal__r.Agent_Commission_Euro__c / Proposal_Line_Item__r.Proposal__r.Gross_Amount_Euro__c ) * ( Quantity__c * Cost_Euro__c ),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Commission Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_Commission__c</fullName>
        <formula>if( Proposal_Line_Item__r.Proposal__r.Agent_Commission__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Agent_Commission__c / Proposal_Line_Item__r.Proposal__r.Net_Amount__c ) * ( Quantity__c * Cost__c ), 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <formula>Location__r.Airport__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>CPM Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charlie_Id__c</fullName>
        <label>Charlie Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Choosen_Other_charges_Euro__c</fullName>
        <formula>if(Media_Cost_Euro__c = null, 
If( Proposal_Line_Item__r.Other_Charges_Euro__c &lt;&gt; 0.00, 
( Proposal_Line_Item__r.Other_Charges_Euro__c/Proposal_Line_Item__r.Cost_Euro__c)*(Cost_Euro__c * Quantity__c ), 
if( Proposal_Line_Item__r.Proposal__r.Other_Charges_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Charges_Euro__c /Proposal_Line_Item__r.Proposal__r.Gross_Amount_Euro__c)*(Cost_Euro__c * Quantity__c ), 
0.00)), 
If( Proposal_Line_Item__r.Other_Charges_Euro__c &lt;&gt; 0.00, 
( Proposal_Line_Item__r.Other_Charges_Euro__c/Proposal_Line_Item__r.Media_Cost_Euro__c)*(Media_Cost_Euro__c * Quantity__c ), 
if( Proposal_Line_Item__r.Proposal__r.Other_Charges_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Charges_Euro__c /Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost_Euro__c)*(Media_Cost_Euro__c * Quantity__c ), 
0.00)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Choosen Other charges Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Choosen_Other_charges__c</fullName>
        <formula>if(Media_Cost__c = null, 
If( Proposal_Line_Item__r.OtherCharges__c &lt;&gt; 0.00, 
( Proposal_Line_Item__r.OtherCharges__c/Proposal_Line_Item__r.Cost__c)*(Cost__c * Quantity__c ), 
if( Proposal_Line_Item__r.Proposal__r.Other_Charges__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Charges__c /Proposal_Line_Item__r.Proposal__r.Net_Amount__c)*(Cost__c * Quantity__c ), 
0.00)), 
If( Proposal_Line_Item__r.OtherCharges__c &lt;&gt; 0.00, 
( Proposal_Line_Item__r.OtherCharges__c/Proposal_Line_Item__r.Media_Cost__c)*(Media_Cost__c * Quantity__c ), 
if( Proposal_Line_Item__r.Proposal__r.Other_Charges__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Charges__c /Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost__c)*(Media_Cost__c * Quantity__c ), 
0.00)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Choosen Other charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chosen_Discount_Euro__c</fullName>
        <formula>if(Media_Cost_Euro__c = null,if( Location_Discount_Euro__c &lt;&gt; 0.00 , 
Location_Discount_Euro__c , 
if(Proposal_Line_Item__r.Discount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Discount_Euro__c/ Proposal_Line_Item__r.Cost_Euro__c ) * (Cost_Euro__c * Quantity__c ) , 
if(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount_Euro__c/ Proposal_Line_Item__r.Proposal__r.Gross_Amount_Euro__c ) * (Cost_Euro__c * Quantity__c ), 
if(Proposal_Line_Item__r.Proposal__r.Other_Discount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Discount_Euro__c/ Proposal_Line_Item__r.Proposal__r.Gross_Amount_Euro__c ) * (Cost_Euro__c * Quantity__c ), 
0.00)))), 
if(Location_Discount_Euro__c &lt;&gt; 0.00 , 
Location_Discount_Euro__c , 
if(Proposal_Line_Item__r.Discount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Discount_Euro__c/ Proposal_Line_Item__r.Media_Cost_Euro__c ) * (Media_Cost_Euro__c * Quantity__c ) , 
if(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount_Euro__c/ Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost_Euro__c ) * (Media_Cost_Euro__c * Quantity__c ), 
if(Proposal_Line_Item__r.Proposal__r.Other_Discount_Euro__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Discount_Euro__c/ Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost_Euro__c ) * (Media_Cost_Euro__c * Quantity__c ), 
0.00)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chosen Discount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Chosen_Discount__c</fullName>
        <formula>if(Media_Cost__c = null,if( Location_Discount__c &lt;&gt; 0.00 , 
Location_Discount__c , 
if(Proposal_Line_Item__r.Discount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Discount__c/ Proposal_Line_Item__r.Cost__c ) * (Cost__c * Quantity__c ) , 
if(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount__c/ Proposal_Line_Item__r.Proposal__r.Net_Amount__c ) * (Cost__c * Quantity__c ), 
if(Proposal_Line_Item__r.Proposal__r.Other_Discount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Discount__c/ Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost__c ) * (Media_Cost__c * Quantity__c ), 
0.00)))), 
if(Location_Discount__c &lt;&gt; 0.00 , 
Location_Discount__c , 
if(Proposal_Line_Item__r.Discount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Discount__c/ Proposal_Line_Item__r.Media_Cost__c ) * (Media_Cost__c * Quantity__c ) , 
if(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Field_Discount_Amount__c/ Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost__c ) * (Media_Cost__c * Quantity__c ), 
if(Proposal_Line_Item__r.Proposal__r.Other_Discount__c &lt;&gt; 0.00, 
(Proposal_Line_Item__r.Proposal__r.Other_Discount__c/ Proposal_Line_Item__r.Proposal__r.Gross_Media_Cost__c ) * (Media_Cost__c * Quantity__c ), 
0.00)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chosen Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_After_Discount_Euro__c</fullName>
        <formula>Cost__c * Quantity__c - Chosen_Discount__c + Choosen_Other_charges__c - Agency_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost After Discount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_After_Discount__c</fullName>
        <formula>Cost__c * Quantity__c - Chosen_Discount__c + Choosen_Other_charges__c - Agency_Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost After Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deduct_from_Net__c</fullName>
        <formula>Proposal_Line_Item__r.Proposal__r.Deduct_from_Net__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deduct from Net</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Discount_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Location Discount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Location Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>CampaignLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Location__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Media Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Media Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Impressions__c</fullName>
        <label>Monthly Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Traffic__c</fullName>
        <label>Monthly Traffic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Months__c</fullName>
        <label>Number of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Screens__c</fullName>
        <label>Number of Screens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <formula>Location__r.Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Inventory Location</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>CampaignLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Price</label>
        <referenceTo>Product_Price__c</referenceTo>
        <relationshipName>CampaignLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>CampaignLineItemLocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Production Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Cost__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Line_Item__c</fullName>
        <label>Proposal Line Item</label>
        <referenceTo>Proposal_Item__c</referenceTo>
        <relationshipLabel>ProposalLineItemLocations</relationshipLabel>
        <relationshipName>CampaignLineItemLocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProposalLineItemLocation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PLL-{0000}</displayFormat>
        <label>ProposalLineItemLocationId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProposalLineItemLocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>